--- a/packages/header/src/components/MobileHeader/styles.module.scss
+++ b/packages/header/src/components/MobileHeader/styles.module.scss
@@ -1,5 +1,3 @@
-@import '@sbercloud/figma-tokens-cloud-platform/build/scss/styles-theme-variables';
-
 .mobileWrapper {
   display: grid;
   grid-template-columns: [header-logo] 1fr [header-balance-tooltip] auto [header-mobile-menu-trigger] auto;
@@ -8,8 +6,6 @@
 
   box-sizing: border-box;
   padding: 8px 16px;
-
-  background-color: var($sys-neutral-background);
 
   & * {
     box-sizing: border-box;
