--- a/packages/header/src/components/MobileMenu/styles.module.scss
+++ b/packages/header/src/components/MobileMenu/styles.module.scss
@@ -1,5 +1,3 @@
-@import '@sbercloud/figma-tokens-cloud-platform/build/scss/styles-theme-variables';
-
 .mobileMenu {
   position: var(--strategy);
   z-index: 1;
@@ -15,8 +13,6 @@
   width: 100%;
   height: calc(100% - var(--top));
   padding: 12px 0;
-
-  background-color: var($sys-neutral-background);
 
   & * {
     box-sizing: border-box;
