--- a/packages/sidebar/src/components/Sidebar/styles.module.scss
+++ b/packages/sidebar/src/components/Sidebar/styles.module.scss
@@ -1,5 +1,3 @@
-@import '@sbercloud/figma-tokens-cloud-platform/build/scss/styles-theme-variables';
-
 $sidebar-full-width: 255px;
 $sidebar-collapsed-width: 53px;
 
@@ -10,8 +8,8 @@ $sidebar-collapsed-width: 53px;
   width: $sidebar-full-width;
   height: 100%;
   padding: 16px 0;
-  background-color: var($sys-neutral-background);
-  border-right: 1px solid var($sys-neutral-line-enabled);
+  border-style: solid;
+  border-right-width: 1px;
 
   &[data-collapsed] {
     width: $sidebar-collapsed-width
